# blog-writing-agent

./: .gitignore  LICENSE  main.ipynb  main.py  pyproject.toml  requirements.txt  test.ipynb
blogwriter/: config.py  routing.py  schemas.py  states.py  workflow.py
blogwriter/agents/: orchestrator.py  reducer.py  research.py  router.py  worker.py
blogwriter/tools/: search.py
frontend/: streamlitui.py
my_logs/: log1.txt  log2  log3  log4  log5  log6
